# s3nav

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  s3.rs  ui.rs
