[package]
name = "s3nav"
version = "0.1.1"
edition = "2024"
description = "A terminal UI file browser for Amazon S3"
license = "MIT"
repository = "https://github.com/madchicken/s3nav"
homepage = "https://github.com/madchicken/s3nav"
keywords = ["s3", "tui", "aws", "terminal", "ratatui"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
tui-textarea = "0.7"
